--- a/stamina_timer.html
+++ b/stamina_timer.html
@@ -4,35 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>體力回復試算</title>
-<style>
-  :root{ --yellow:#fff39b; --orange:#ffd9a6; --bg:#f6f7fb; --card:#fff;
-         --border:#e5e7eb; --accent:#4f46e5; }
-  *{box-sizing:border-box}
-  body{ margin:0; font-family:ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans TC";
-        background:var(--bg); color:#111827; line-height:1.5; }
-  .wrap{ max-width:720px; margin:32px auto; padding:16px }
-  .card{ background:var(--card); border:1px solid var(--border); border-radius:16px;
-         box-shadow:0 6px 20px rgba(0,0,0,.06); overflow:hidden; }
-  .header{ padding:18px 20px; font-weight:700; font-size:18px;
-           border-bottom:1px solid var(--border); background:linear-gradient(180deg,#fafafa,#fff); }
-  .grid{ display:grid; grid-template-columns:1.4fr 1fr .8fr; gap:10px; padding:16px 20px; }
-  .row{ display:contents }
-  .label{ align-self:center; color:#374151 }
-  .field,.calc{ display:flex; align-items:center; border-radius:10px; overflow:hidden; border:1px solid var(--border); }
-  input[type="text"]{ width:100%; border:0; padding:10px 12px; font-size:16px; background:transparent; outline:none; }
-  .unit{ padding:0 10px; font-size:14px; color:#6b7280; white-space:nowrap; border-left:1px dashed #d1d5db; background:rgba(0,0,0,.02) }
-  .field{ background:var(--yellow) } .calc{ background:var(--orange) }
-  .hint{ padding:0 20px 18px; color:#6b7280; font-size:12px; }
-  .footer{ padding:12px 20px 20px; display:flex; gap:10px; flex-wrap:wrap; border-top:1px solid var(--border) }
-  button{ border:1px solid var(--border); background:#fff; border-radius:10px; padding:10px 14px; cursor:pointer; font-weight:600; }
-  button.primary{ background:var(--accent); color:#fff; border-color:transparent }
-  .kpi{ padding:12px 20px 8px; display:flex; gap:12px; flex-wrap:wrap; align-items:center }
-  .pill{ background:#f3f4f6; border:1px solid var(--border); border-radius:999px; padding:8px 12px; font-size:13px; color:#374151; }
-  .progress-wrap{ width:calc(100% - 40px); margin:6px 20px 16px; height:16px; background:#e5e7eb; border-radius:8px; overflow:hidden; }
-  .progress-bar{ height:100%; width:0%; background:linear-gradient(90deg,#60a5fa,#2563eb); transition:width .3s ease; }
-  .progress-text{ text-align:right; padding:0 20px 12px; color:#374151; font-size:12px; }
-  @media (max-width:640px){ .grid{grid-template-columns:1fr} .unit{display:none} }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="wrap">
